3.0.15.4 (open)

3.0.15.3
 * <rdar://problem/34140814> (CASSANDRA-13983 / 4.0) Implement binary full query log in Cassandra
 * <rdar://problem/35296443> (Apple Internal) During streaming validate each key read is in owned ranges

3.0.15.2
 * <rdar://problem/35057289> (CASSANDRA-13321, CASSANDRA-13953 / 4.0) Backport sstable metadata checksum patches
 * <rdar://problem/35009258> (CASSANDRA-13975, Not Yet Fixed) Properly handle oversized read repair mutations
 * <rdar://problem/35097544> (Apple Internal) Reverse iteration order of resources during permissions checking

3.0.15.1
 * <rdar://problem/28899529> (CASSANDRA-13771 / 4.0) Emit a KPI every time we hit tombstone failure
 * <rdar://problem/34917457> (CASSANDRA-13939 / 3.0.16) Mishandling of cells for removed/dropped columns when reading legacy files
 * <rdar://problem/34976976> (CASSANDRA-13930 / 4.0) Backport CASSANDRA-13930 - avoid grabbing read lock
 * <rdar://problem/34894619> (Apple Internal) Pre-warm permissions cache  
 * <rdar://problem/34942194> (Apple Internal) Compaction could resurrect data if it's racing with a repair with christmas patch enabled
 
3.0.15.0
 * <rdar://problem/33089516> (CASSANDRA-13846 / 4.0) Add unit tests for unique CK queries
 * <rdar://problem/34395531> (CASSANDRA-13786 / 4.0) Rework CSM.getScanners synchronization
 * <rdar://problem/34398713> (CASSANDRA-13818 / 4.0) Add incremental repair support for --hosts, --force, and subrange repair 
 * <rdar://problem/33299827> (Apple Internal) Don't accepts hints for data instance don't own
 * <rdar://problem/33279387> (Apple Internal) Don't allow writes for token range instance don't own
 * <rdar://problem/33279491> (Apple Internal) Don't accept reads for ranges which we dont own
 * <rdar://problem/33280054> (Apple Internal) Don't accept incoming out outgoing stream for token instance dont own.
 * <rdar://problem/33280066> (Apple Internal) Don't accept Merkle tree request for ranges instance dont own 