@@ -1,6 +1,7 @@
 3.0.15.4 (open)
 
 3.0.15.3
+ * <rdar://problem/35372014> (Apple Internal) Cass: force repair fails, can't do host replacement
  * <rdar://problem/34140814> (CASSANDRA-13983 / 4.0) Implement binary full query log in Cassandra
  * <rdar://problem/35296443> (Apple Internal) During streaming validate each key read is in owned ranges
 
